trunk/Archive2/13/c4915e1d3edb49/output
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:11:16: error: call to deleted constructor of 'non_default_constructible'
        return T();
               ^
main.cpp:18:18: note: in instantiation of member function 'dummy<non_default_constructible>::new_t' requested here
    auto ndc = d.new_t();
                 ^
main.cpp:3:5: note: 'non_default_constructible' has been explicitly marked deleted here
    non_default_constructible() = delete;
    ^
1 error generated.
